migration-test/04-httproutes/demo-app-websocket-app-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: websocket-app-redirect
  namespace: demo-app
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "ws.example.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
