migration-test/04-httproutes/demo-app-websocket-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: websocket-app
  namespace: demo-app
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: https-1
  hostnames:
    - "ws.example.com"
  rules:
    - matches:
        - path:
            type: RegularExpression
            value: /socket.io(/|$)(.*)
      backendRefs:
        - name: web-frontend
          port: 80
